--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spotify.client-secret=${SPOTIFY_CLIENT_SECRET:}
 
 security.jwt.secret=${JWT_SECRET:change-me}
 security.jwt.expiration-minutes=120
+
+app.auth.username=${APP_AUTH_USERNAME:admin}
+app.auth.password=${APP_AUTH_PASSWORD:admin}
