feat(backend): add jwt auth, spotify genres, validations and tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,13 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
+security.user.username=admin
+security.user.password=admin
+
 spotify.client-id=${SPOTIFY_CLIENT_ID:}
 spotify.client-secret=${SPOTIFY_CLIENT_SECRET:}
 
-security.jwt.secret=${JWT_SECRET:change-me}
+security.jwt.secret=${JWT_SECRET:jwt-secret-example-for-test}
 security.jwt.expiration-minutes=120
 
 app.auth.username=${APP_AUTH_USERNAME:admin}
